Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32570

Show (some) messages as pop-up instead of as horizontal InfoBar.

XMLWordPrintable

      The messaging system is being redesigned. A new element are pop-up messages as alternative for InfoBars. Global notifications like available updates or missing sdk settings can be shown as those messages.


      These messages are showing up on the lower right, in the area where Qt Creator already shows the progress of various operations. They could be interleaved with progress bars, or have their own list.. (up for discussion).

      Like the renewed InfoBars (see QTCREATORBUG-32566), the Messages fall into Info/Warning/Error categories.

      It could make sense to support that via the InfoBar class, allowing an InfoBar entry to be added to the layout of progresses (or to an equivalent message-only layout). Such am message has the same content and ui functionality as an InfoBar entry.

        1. image-2025-03-03-11-50-03-646.png
          image-2025-03-03-11-50-03-646.png
          112 kB
        2. ObscuredButton.png
          ObscuredButton.png
          244 kB
        3. LegalMessage.webp
          127 kB
        For Gerrit Dashboard: QTCREATORBUG-32570
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes