Add a "popup" variant for global notifications

Adds a ICore::popupInfoBar() that shows the info in the progress info
area.

If the info entry provides a details widget, that is shown as a separate
toplevel window (so details widget creators should set a window title if
they are shown in popup style).

Set QTC_DEBUG_POPUPNOTIFICATION=1 to debug this by relaying all
ICore::infoBar() to popupInfoBar() instead.

Set QTC_DEBUG_POPUPNOTIFICATION_TYPE=<enum_int_value> to override the
info type for all items too.

Task-number: QTCREATORBUG-32570
Change-Id: Iaf6b30f445f233ca6e62fdb7ba32fd25fa136ebc
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>